Fixed header on mobile and updated content

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,19 @@ h1, h2 {
     font-family: 'Bebas Neue', cursive;
 }
 
+@media only screen and (min-width: 601px) {
+    img.float-right {
+        float: right;
+        margin: 0 0 $default-spacing $default-spacing;
+    }
+  }
+
+/* Apply this property to a .row to make all columns equal hights*/
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
 /* ---------------------------------------- */
 /* Highlight for Top of Page */
 /* ---------------------------------------- */
